# Data-Wormhole

./: .gitignore  LICENSE  README.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/lib/: crypto.ts  logger.ts
app/src/types/: jsqr.d.ts  qrcode.d.ts
qr-transfer/: Cargo.toml  README.md
qr-transfer/crates/qr-cli/: Cargo.toml
qr-transfer/crates/qr-cli/src/: main.rs
qr-transfer/crates/qr-cli/src/commands/: benchmark.rs  keygen.rs  mod.rs  receive.rs  send.rs  verify.rs
qr-transfer/crates/qr-codec/: Cargo.toml
qr-transfer/crates/qr-codec/src/: accessibility.rs  generator.rs  grid.rs  lib.rs
qr-transfer/crates/qr-compression/: Cargo.toml
qr-transfer/crates/qr-compression/src/: lib.rs
qr-transfer/crates/qr-crypto/: Cargo.toml
qr-transfer/crates/qr-crypto/src/: error.rs  fountain_seed.rs  identity.rs  lib.rs  session.rs
qr-transfer/crates/qr-fountain/: Cargo.toml
qr-transfer/crates/qr-fountain/src/: block.rs  decoder.rs  encoder.rs  lib.rs
qr-transfer/crates/qr-protocol/: Cargo.toml
qr-transfer/crates/qr-protocol/src/: chunking.rs  frame.rs  handshake.rs  lib.rs  state.rs
qr-transfer/docs/spec/: 01-intro.md
