[workspace]
members = [
    "crates/qr-crypto",
    "crates/qr-protocol",
    "crates/qr-codec",
    "crates/qr-fountain",
    "crates/qr-compression",
    "crates/qr-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QR Transfer Team <team@qrtransfer.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/qr-transfer/qr-transfer"
rust-version = "1.78"

[workspace.dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
chacha20 = "0.9"
zeroize = { version = "1.7", features = ["derive"] }

# Fountain codes
raptorq = "1.7"

# Compression
zstd = "0.13"

# QR Codec
qrcode = "0.14"
image = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
cbor4ii = { version = "0.3", features = ["serde1", "use_std"] }

# Async
 Tokio = { version = "1.37", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"

# QR Transfer internal
qr-crypto = { path = "crates/qr-crypto" }
qr-protocol = { path = "crates/qr-protocol" }
qr-codec = { path = "crates/qr-codec" }
qr-fountain = { path = "crates/qr-fountain" }
qr-compression = { path = "crates/qr-compression" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1