[package]
name = "qr-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic primitives for QR Transfer: X25519, AES-GCM, HKDF, BLAKE3"

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
chacha20 = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["export-controlled"]
export-controlled = []
export-safe = []

[dev-dependencies]