[package]
name = "qr-fountain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Fountain codes (RaptorQ) with deterministic PRNG seeding for QR Transfer"

[dependencies]
raptorq = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]